--- a/validation_code_ocr/paddle_train.ipynb
+++ b/validation_code_ocr/paddle_train.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 数据集路径设置\n",
-    "DATA_PATH = \"./dataset/OCR_Dataset\"\n",
+    "DATA_PATH = r\"F:\\dataset\\validation_code\"\n",
     "# 训练轮数\n",
     "EPOCH = 10\n",
     "# 每批次数据大小\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.4423 - 27ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.7131 - 102ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\0\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.4532 - 91ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.6287 - 89ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 2/10\n",
-      "step  10/526 [..............................] - loss: 0.3808 - ETA: 8s - 17ms/step"
+      "step  10/526 [..............................] - loss: 0.6877 - ETA: 6s - 13ms/step"
      ]
     },
     {
@@ -228,13 +228,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.1974 - 13ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.2892 - 11ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\1\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0830 - 11ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.1473 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 3/10\n",
-      "step  10/526 [..............................] - loss: 0.2938 - ETA: 7s - 15ms/step"
+      "step  10/526 [..............................] - loss: 0.3765 - ETA: 7s - 14ms/step"
      ]
     },
     {
@@ -249,13 +249,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0316 - 13ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0732 - 10ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\2\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0400 - 12ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0701 - 8ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 4/10\n",
-      "step  10/526 [..............................] - loss: 0.1062 - ETA: 8s - 16ms/step"
+      "step  10/526 [..............................] - loss: 0.1435 - ETA: 6s - 13ms/step"
      ]
     },
     {
@@ -270,13 +270,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0150 - 14ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0321 - 11ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\3\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0290 - 12ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0388 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 5/10\n",
-      "step  10/526 [..............................] - loss: 0.1826 - ETA: 8s - 16ms/step"
+      "step  10/526 [..............................] - loss: 0.1890 - ETA: 6s - 12ms/step"
      ]
     },
     {
@@ -291,13 +291,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0131 - 13ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0436 - 10ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\4\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0220 - 13ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0337 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 6/10\n",
-      "step  10/526 [..............................] - loss: 0.0168 - ETA: 9s - 18ms/step"
+      "step  10/526 [..............................] - loss: 0.0305 - ETA: 6s - 12ms/step"
      ]
     },
     {
@@ -312,13 +312,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.1325 - 14ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0881 - 10ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\5\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0139 - 12ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0223 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 7/10\n",
-      "step  10/526 [..............................] - loss: 0.2842 - ETA: 8s - 17ms/step"
+      "step  10/526 [..............................] - loss: 0.2936 - ETA: 6s - 12ms/step"
      ]
     },
     {
@@ -333,13 +333,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0085 - 13ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0183 - 10ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\6\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0119 - 12ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0170 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 8/10\n",
-      "step  10/526 [..............................] - loss: 0.0075 - ETA: 8s - 17ms/step"
+      "step  10/526 [..............................] - loss: 0.0267 - ETA: 7s - 14ms/step"
      ]
     },
     {
@@ -354,13 +354,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0094 - 14ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0127 - 11ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\7\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0095 - 11ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0138 - 10ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 9/10\n",
-      "step  10/526 [..............................] - loss: 0.0067 - ETA: 8s - 17ms/step"
+      "step  10/526 [..............................] - loss: 0.0178 - ETA: 6s - 13ms/step"
      ]
     },
     {
@@ -375,13 +375,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0049 - 13ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0162 - 11ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\8\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0078 - 12ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0110 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "Epoch 10/10\n",
-      "step  10/526 [..............................] - loss: 0.0078 - ETA: 8s - 17ms/step"
+      "step  10/526 [..............................] - loss: 0.0169 - ETA: 6s - 13ms/step"
      ]
     },
     {
@@ -396,10 +396,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 526/526 [==============================] - loss: 0.0057 - 14ms/step          \n",
+      "step 526/526 [==============================] - loss: 0.0145 - 10ms/step          \n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\9\n",
       "Eval begin...\n",
-      "step 64/64 [==============================] - loss: 0.0075 - 11ms/step          \n",
+      "step 64/64 [==============================] - loss: 0.0119 - 9ms/step          \n",
       "Eval samples: 1024\n",
       "save checkpoint at g:\\workspace_github\\ai_application\\validation_code_ocr\\output\\final\n"
      ]
@@ -465,7 +465,7 @@
     "from paddle.io import DataLoader\n",
     "\n",
     "# 数据集路径设置\n",
-    "DATA_PATH = \"./dataset/OCR_Dataset\"\n",
+    "DATA_PATH = r\"F:\\dataset\\validation_code\"\n",
     "batch_size = 128 * 2\n",
     "# 训练轮数\n",
     "EPOCH = 10\n",
@@ -529,10 +529,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "IMAGE_SHAPE_H = 30\n",
+    "IMAGE_SHAPE_W = 70\n",
+    "\n",
     "# 与训练近似，但不包含Label\n",
     "class InferReader(Dataset):\n",
     "    def __init__(self, dir_path=None, img_path=None):\n",
@@ -562,7 +565,7 @@
     "        # 获取图像路径\n",
     "        file_path = self.img_paths[index]\n",
     "        # 使用Pillow来读取图像数据并转成Numpy格式\n",
-    "        img = Image.open(file_path)\n",
+    "        img = Image.open(file_path).resize((IMAGE_SHAPE_W, IMAGE_SHAPE_H))\n",
     "        img = np.array(img, dtype=\"float32\").reshape((IMAGE_SHAPE_C, IMAGE_SHAPE_H, IMAGE_SHAPE_W)) / 255\n",
     "        return img\n",
     "\n",
@@ -572,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -594,8 +597,9 @@
      "output_type": "stream",
      "text": [
       "Predict begin...\n",
-      "step 1/1 [==============================] - 27ms/step\n",
-      "Predict samples: 1\n",
+      "step 1/1 [==============================] - 2s/step\n",
+      "Predict samples: 2\n",
+      "文件名：8403.jpg，推理结果为：[7, 4]\n",
       "文件名：9264.jpg，推理结果为：[3, 9, 5, 2]\n"
      ]
     }
